# mcp-proxy-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build-and-notify-portainer.yml  deploy-ssh.yml  deploy.yml  stack-webhook.yml
deploy/: portainer-stack.yml
docker/: seed_mcp_news.py
servers/mcp-news-server/: pyproject.toml
servers/mcp-news-server/src/mcp_news_server/: __init__.py  __main__.py  dedupe.py  default_feeds.yaml  fetchers.py  http_util.py  models.py  server.py  store.py
src/mcp_proxy/: __init__.py  __main__.py  app.py  catalog_loader.py  catalog_models.py  client_store.py  config_store.py  domain_store.py  log_buffer.py  mcp_client_log.py  models.py  npm_install.py  proxy_mcp.py  pypi_venv.py  security.py  settings.py  stdio_package_meta.py  upstream_inspect.py
src/mcp_proxy/api/: __init__.py  auth.py  catalog.py  clients.py  domains.py  observability.py  routes.py  servers.py  venvs.py
src/mcp_proxy/catalog/: __init__.py  builtin_presets.json
static/admin/: index.html  login.html
