[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-proxy"
version = "0.1.0"
description = "MCP aggregation proxy with admin UI and tool search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6,<0.116",
  "itsdangerous>=2.2.0,<3",
  "uvicorn[standard]>=0.32.1,<0.33",
  "pydantic-settings>=2.6.1,<3",
  "mcp>=1.10.1,<2",
  "httpx>=0.28.1,<0.29",
]

[project.scripts]
mcp-proxy = "mcp_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_proxy = ["py.typed", "catalog/*.json"]
